# ukb_deppred

./: .gitattributes  .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  setup.py  ukbdep_cluster.py  ukbdep_comorbid.py  ukbdep_corr_brain.py  ukbdep_corr_pheno.py  ukbdep_extract_data.py  ukbdep_sem_body.py  ukbdep_sociodemo.py
plot_scripts/: ukbdep_corr_brain.py  ukbdep_sociodemo.py
replication/: README.md  ukb_dep-pheno_corr.py  ukb_dep_cluster.py  ukb_extract_data.py  ukb_extract_rsfc.py  ukb_extracted_data.csv  ukb_genetic.tsv  ukb_pheno_efa.py  ukb_raw.tsv
replication/data/: UKB_antidepressant_code.csv  ukb_extracted_data.csv  ukb_extracted_data_Body-comp.csv  ukb_extracted_data_Brain-CS.csv  ukb_extracted_data_Brain-CT.csv  ukb_extracted_data_Brain-GMV.csv  ukb_extracted_data_Brain-WM.csv  ukb_extracted_data_Brain-func.csv  ukb_extracted_data_Health-risk.csv  ukb_extracted_data_Immunometabolic.csv  ukb_extracted_data_Lifestyle.csv  ukb_extracted_data_Musculoskeletal.csv  ukb_extracted_data_train.csv  ukb_genetic.tsv  ukb_raw.tsv  ukb_raw.variant-d7e0.tsv
replication/data/extracted_data/: ukb_extracted_data_Body-comp.csv  ukb_extracted_data_Body-comp_male_clusters.csv  ukb_extracted_data_Brain-CS.csv  ukb_extracted_data_Brain-CS_male_clusters.csv  ukb_extracted_data_Brain-CT.csv  ukb_extracted_data_Brain-CT_male_clusters.csv  ukb_extracted_data_Brain-GMV.csv  ukb_extracted_data_Brain-GMV_male_clusters.csv  ukb_extracted_data_Brain-WM.csv  ukb_extracted_data_Brain-WM_female_clusters.csv  ukb_extracted_data_Brain-WM_male_clusters.csv  ukb_extracted_data_Brain-func.csv  ukb_extracted_data_Brain-func_male_clusters.csv  ukb_extracted_data_Health-risk.csv  ukb_extracted_data_Health-risk_male_clusters.csv  ukb_extracted_data_Immunometabolic.csv  ukb_extracted_data_Immunometabolic_male_clusters.csv  ukb_extracted_data_Lifestyle.csv  ukb_extracted_data_Lifestyle_female_clusters.csv  ukb_extracted_data_Lifestyle_male_clusters.csv  ukb_extracted_data_Musculoskeletal.csv  ukb_extracted_data_Musculoskeletal_female_clusters.csv  ukb_extracted_data_Musculoskeletal_male_clusters.csv  ukb_extracted_data_train.csv
replication/data/extracted_datat/: ukb_extracted_data_Body-comp_female_clusters.csv  ukb_extracted_data_Brain-CS_female_clusters.csv  ukb_extracted_data_Brain-CT_female_clusters.csv  ukb_extracted_data_Brain-CT_male_clusters.csv  ukb_extracted_data_Brain-GMV_female_clusters.csv  ukb_extracted_data_Brain-GMV_male_clusters.csv  ukb_extracted_data_Brain-WM_male_clusters.csv  (+4 more)
replication/plots/: eps_to_png.py  ukb_cluster_female.eps  ukb_cluster_male.eps  ukb_corr.eps  ukb_corr_female.eps  ukb_corr_male_1.eps  ukb_corr_male_2.eps
replication/results/: ukb_dep-pheno_corr_sig.csv  ukb_dep_clusters.csv
replication/utilities/: eps_to_png.py
replication_data/: FS_a2009s_labels.csv  FS_aseg_labels.csv  JHU_labels.csv  UKB_selected_fields_pheno.csv  UKB_selected_fields_sem.csv  icd10_level_map.csv  icd10_neurological.csv  lh.aparc.a2009s.annot  rh.aparc.a2009s.annot  w41655_20241217.csv  w41655_20250818.csv
scripts/: ukbdep_cluster.py  ukbdep_corr_brain.py  ukbdep_corr_pheno.py  ukbdep_extract_data.py
ukb_deppred/: default.config  interfaces.py  main.py  utilities.py
(+50 files in other folders)
