[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ukb_deppred"
authors = [
    {name = "Jianxiao Wu", email = "j.wu@fz-juelich.de"}
]
description = "Depression prediction in UK Biobank"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
keywords = ["neuroimaging", "multimodal", "machine learning", "depression"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Neuroscience :: Neuroimaging",
]
dependencies = [
    "datalad ~= 1.1.2",
    "nipype ~= 1.8.5",
    "numpy ~= 2.0",
    "pandas ~= 2.2.2",
    "scipy ~= 1.14.0",
    "scikit-learn ~= 1.5.1",
]
dynamic = ["version"]

[project.scripts]
mpp = "mpp.main:main"
mfe = "mpp.mfe.main:main"
mfe_dti = "mpp.mfe.dti:main"

[project.urls]
repository = "https://github.com/jadecci/ukb_deppred"
repository-gin = "https://gin.g-node.org/jadecci/ukb_deppred"

[tool.setuptools]
packages = ["ukb_deppred"]

[tool.setuptools.dynamic]
version = {attr = "ukb_deppred.VERSION"}